--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,9 +18,16 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-shell = "2"
+octocrab = "0.32"
+tokio = { version = "1.0", features = ["full"] }
+tempfile = "3.8"
+git2 = "0.18"
+chrono = "0.4"
+ignore = "0.4"
+log = "0.4"
+env_logger = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1"
-walkdir = "2.3"
-
+serde_json = "1.0"
+tauri = { version = "2.0", features = [] }
+walkdir = "2.4"
+tauri-plugin-shell = "2.0.0-beta"
