--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
@@ -18,6 +20,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -41,7 +45,17 @@ jobs:
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libwebkit2gtk-4.0-dev \
+            libappindicator3-dev \
+            librsvg2-dev \
+            patchelf \
+            libglib2.0-dev \
+            build-essential \
+            libssl-dev \
+            libxdo-dev \
+            pkg-config
 
       - name: Install frontend dependencies
         run: bun install
@@ -49,17 +63,31 @@ jobs:
       - name: Build frontend
         run: bun run build
 
+      - name: Get version
+        id: get_version
+        shell: bash
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          else
+            echo "version=0.0.0-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: ${{ github.ref_name }}
-          releaseName: 'App v__VERSION__'
-          releaseBody: 'See the assets to download and install this version.'
+          tagName: v${{ steps.get_version.outputs.version }}
+          releaseName: 'Node Shred v${{ steps.get_version.outputs.version }}'
+          releaseBody: |
+            See the assets to download and install this version.
+            
+            Changes in this version:
+            ${{ github.event.head_commit.message }}
           releaseDraft: true
           prerelease: false
           includeDebug: false
           includeRelease: true
           includeUpdaterJson: true
-          updaterJsonKeepUniversal: false 
+          updaterJsonPreferNsis: true 
