Update GitHub Actions workflow to include additional build dependencies
- Expanded the list of required packages in the workflow to include glib-2.0, libglib2.0-0, libglib2.0-dev, libatk1.0-dev, and libcairo2-dev, ensuring all necessary libraries are available for the build process.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,12 @@ jobs:
             build-essential \
             libssl-dev \
             libxdo-dev \
-            pkg-config
+            pkg-config \
+            glib-2.0 \
+            libglib2.0-0 \
+            libglib2.0-dev \
+            libatk1.0-dev \
+            libcairo2-dev
 
       - name: Install frontend dependencies
         run: bun install
