--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,21 +46,23 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
+            pkg-config \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
             libappindicator3-dev \
             librsvg2-dev \
             patchelf \
-            libglib2.0-dev \
             build-essential \
             libssl-dev \
             libxdo-dev \
-            pkg-config \
-            glib-2.0 \
-            libglib2.0-0 \
             libglib2.0-dev \
-            libatk1.0-dev \
-            libcairo2-dev
+            libsoup2.4-dev \
+            libjavascriptcoregtk-4.0-dev
+          
+          # Verify pkg-config and glib installation
+          pkg-config --modversion glib-2.0 || true
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
+          ls -la /usr/lib/x86_64-linux-gnu/pkgconfig/glib-2.0.pc || true
 
       - name: Install frontend dependencies
         run: bun install
@@ -82,6 +84,7 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
         with:
           tagName: v${{ steps.get_version.outputs.version }}
           releaseName: 'Node Shred v${{ steps.get_version.outputs.version }}'
