--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-20.04, windows-latest]
+        platform: [macos-latest, ubuntu-22.04, windows-latest]
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -42,27 +42,48 @@ jobs:
           workspaces: './src-tauri -> target'
 
       - name: Install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
+          # First install glib2.0 specifically
+          sudo apt-get install -y glib-2.0 libglib2.0-dev
+
+          # Debug glib installation
+          echo "Checking glib installation..."
+          dpkg -l | grep glib
+          
           sudo apt-get install -y \
-            pkg-config \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
-            libappindicator3-dev \
+            libayatana-appindicator3-dev \
             librsvg2-dev \
-            patchelf \
-            build-essential \
-            libssl-dev \
-            libxdo-dev \
             libglib2.0-dev \
+            libglib2.0-dev-bin \
+            libglib2.0-0 \
+            libcairo2-dev \
+            libpango1.0-dev \
+            libatk1.0-dev \
+            libgdk-pixbuf2.0-dev \
             libsoup2.4-dev \
             libjavascriptcoregtk-4.0-dev
+
+          # Set pkg-config path
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig:/usr/lib/pkgconfig" >> $GITHUB_ENV
           
-          # Verify pkg-config and glib installation
+          # Debug pkg-config and glib
+          echo "Debugging pkg-config and glib..."
+          pkg-config --version
+          pkg-config --list-all | grep glib
           pkg-config --modversion glib-2.0 || true
-          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
-          ls -la /usr/lib/x86_64-linux-gnu/pkgconfig/glib-2.0.pc || true
+          pkg-config --cflags --libs glib-2.0 || true
+          echo "Checking glib-2.0.pc location..."
+          find /usr -name "glib-2.0.pc" 2>/dev/null || true
+          echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH"
 
       - name: Install frontend dependencies
         run: bun install
@@ -84,7 +105,7 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
+          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig:/usr/lib/pkgconfig
         with:
           tagName: v${{ steps.get_version.outputs.version }}
           releaseName: 'Node Shred v${{ steps.get_version.outputs.version }}'
