--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
+          
           # First install glib2.0 specifically
           sudo apt-get install -y glib-2.0 libglib2.0-dev
 
@@ -52,16 +53,27 @@ jobs:
           echo "Checking glib installation..."
           dpkg -l | grep glib
           
+          # Install core dependencies
           sudo apt-get install -y \
             build-essential \
             curl \
             wget \
             file \
-            libssl-dev \
+            pkg-config \
+            libssl-dev
+
+          # Install GTK and WebKit dependencies
+          sudo apt-get install -y \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
+            libwebkit2gtk-4.1-dev \
+            libjavascriptcoregtk-4.0-dev \
+            libjavascriptcoregtk-4.1-dev \
             libayatana-appindicator3-dev \
-            librsvg2-dev \
+            librsvg2-dev
+
+          # Install GLib and related dependencies
+          sudo apt-get install -y \
             libglib2.0-dev \
             libglib2.0-dev-bin \
             libglib2.0-0 \
@@ -69,20 +81,22 @@ jobs:
             libpango1.0-dev \
             libatk1.0-dev \
             libgdk-pixbuf2.0-dev \
-            libsoup2.4-dev \
-            libjavascriptcoregtk-4.0-dev
+            libsoup2.4-dev
 
           # Set pkg-config path
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig:/usr/lib/pkgconfig" >> $GITHUB_ENV
           
-          # Debug pkg-config and glib
-          echo "Debugging pkg-config and glib..."
+          # Debug package installation
+          echo "Checking installed packages..."
+          dpkg -l | grep -E 'gtk|webkit|javascript|glib'
+          
+          # Debug pkg-config setup
+          echo "Debugging pkg-config..."
           pkg-config --version
-          pkg-config --list-all | grep glib
-          pkg-config --modversion glib-2.0 || true
-          pkg-config --cflags --libs glib-2.0 || true
-          echo "Checking glib-2.0.pc location..."
-          find /usr -name "glib-2.0.pc" 2>/dev/null || true
+          echo "Checking for JavaScriptCore GTK..."
+          pkg-config --list-all | grep -i javascript
+          pkg-config --modversion javascriptcoregtk-4.1 || true
+          find /usr -name "javascriptcoregtk-4.1.pc" 2>/dev/null || true
           echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH"
 
       - name: Install frontend dependencies
